// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Recipe page component  expected render create recipe page 1`] = `
<RecipeEditor
  handleButtonClick={[Function]}
  hasNotFound={false}
  hasRender={true}
  loading={false}
  message={[Function]}
  submitButtonText="post recipe"
/>
`;

exports[`Create Recipe page component  should navigate to recipe details page when recipe is successfully
  created  1`] = `
<RecipeEditor
  handleButtonClick={[Function]}
  hasNotFound={false}
  hasRender={true}
  loading={false}
  message={[Function]}
  submitButtonText="post recipe"
/>
`;

exports[`Create Recipe page component  should post a recipe 1`] = `
<RecipeEditor
  handleButtonClick={[Function]}
  hasNotFound={false}
  hasRender={true}
  loading={false}
  message={[Function]}
  submitButtonText="post recipe"
/>
`;
